2008-01-13  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Fields.pm: Drop public function
	set_fields_importance() in favor of a method on
	Dpkg::Fields::Object. Integrate	public function
	sort_field_by_importance() in the output() method where it was
	used.
	* scripts/Dpkg/Changelog.pm, scripts/dpkg-genchanges.pl,
	scripts/dpkg-gencontrol.pl, scripts/dpkg-source.pl: Updated to use
	the set_field_importance() method instead of the removed function.
	* scripts/Dpkg/Control.pm: Update pod documentation to refer to
	Dpkg::Fields::Object instead of the invalid Dpkg::Cdata::Object.

2008-01-13  Frank Lichtenheld  <djpig@debian.org>

	* scripts/Dpkg/Fields.pm (dump): Allow to omit the
	filehandle argument. If the function is called in
	non-void context, also remove the printed string
	to the caller. Together this avoids having to fiddle
	with filehandles if the caller doesn't want to.
	(output): Likewise.
	* scripts/Dpkg/Changelog.pm (data2rfc822): Simplify
	using this new behaviour.

	* scripts/t/600_Dpkg_Changelog.t: Add a new changelog
	'fields' that tests the handling of the different fields
	in the dpkg format.

	* scripts/Dpkg/Changelog.pm: Replace all field hashes
	with Dpkg::Changelog::Entry objects.
	(Dpkg::Changelog::Entry): Base on Dpkg::Fields::Object.
	(data2rfc822): Use Dpkg::Fields::Object->output and fix
	handling of user-defined fields.
	(data2rfc822_mult): Merge into data2rfc822 (autodetect
	whether the argument is an object or an array of object).
	* scripts/Dpkg/Changelog/Debian.pm: Adapt for
	Dpkg::Changelog::Entry changes.
	* scripts/t/600_Dpkg_Changelog.t: Likewise.

2008-01-12  Raphael hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Fields.pm, scripts/dpkg-source.pl: Add support of
	Dm-Upload-Allowed field. It automatically ends up in the dsc.

2008-01-12  Raphael hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Fields.pm: Define variables containing
	authoritative list of fields for debian/control (one for source