@@ -1,3 +1,11 @@
+2008-01-14  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
+	scripts/dpkg-source.pl: Hint Perl into using UTF-8 for output
+	on *.dsc, *.changes and DEBIAN/control files. Updated some open() calls
+	for more consistency and added binmode() calls for filehandles that
+	handle only binary data.
+
 2008-01-13  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Fields.pm: Drop public function
